// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders in state INTRO 1`] = `
<div
  className="Game page"
>
  <Intro
    imageData={
      Array [
        Object {
          "filename": "Nehemiah_Persoff_1960.JPG",
          "id": 3489865,
          "image": "https://upload.wikimedia.org/wikipedia/commons/b/ba/Nehemiah_Persoff_1960.JPG",
          "name": "Nehemiah Persoff",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state MEMORIZE 1`] = `
<div
  className="Game page"
>
  <Memorize
    imageData={
      Array [
        Object {
          "filename": "Nehemiah_Persoff_1960.JPG",
          "id": 3489865,
          "image": "https://upload.wikimedia.org/wikipedia/commons/b/ba/Nehemiah_Persoff_1960.JPG",
          "name": "Nehemiah Persoff",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RECALL 1`] = `
<div
  className="Game page"
>
  <Recall
    imageData={
      Array [
        Object {
          "filename": "Nehemiah_Persoff_1960.JPG",
          "id": 3489865,
          "image": "https://upload.wikimedia.org/wikipedia/commons/b/ba/Nehemiah_Persoff_1960.JPG",
          "name": "Nehemiah Persoff",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RESULTS 1`] = `
<div
  className="Game page"
>
  <Results
    imageData={
      Array [
        Object {
          "filename": "Nehemiah_Persoff_1960.JPG",
          "id": 3489865,
          "image": "https://upload.wikimedia.org/wikipedia/commons/b/ba/Nehemiah_Persoff_1960.JPG",
          "name": "Nehemiah Persoff",
        },
      ]
    }
  />
</div>
`;
